--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,72 @@
-.App {
-  text-align: center;
+:root {
+	--color1: red;
+	--color2: green;
+	--color3: yellow;
+	--color4: blue;
+	--color5: orange;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+html,
+body,
+#root {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	background: var(--color1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.full-container {
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+#quote-box {
+	width: 400px;
+	height: 300px;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 20%;
+	border-radius: 6px;
+	background: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.author-data {
+	width: 90%;
+	padding: 0 15px;
+}
+
+#text {
+	font-size: 20px;
+	text-indent: 20px;
+	text-align: justify;
+}
+
+#author {
+	margin-top: 15px;
+	text-align: right;
+	display: block;
+}
+
+#author:before {
+	content: '- ';
+}
+
+#new-quote {
+	width: 130px;
+	height: 50px;
+	display: flex;
+	margin: 20px 20px 0 auto;
+	text-transform: uppercase;
+	font-weight: 500;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	border: 1px solid;
+	border-color: var(--color1);
+	border-radius: 6px;
+	background: var(--color1);
+	cursor: pointer;
 }
