Project Finished, logic applied

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
 	--color1: red;
 	--color2: green;
-	--color3: yellow;
+	--color3: black;
 	--color4: blue;
 	--color5: orange;
 }
@@ -13,13 +13,7 @@ body,
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	background: var(--color1);
-}
-
-.full-container {
-	width: 100%;
-	height: 100%;
-	position: relative;
+	background: rgb(137, 98, 123);
 }
 
 #quote-box {
@@ -33,9 +27,9 @@ body,
 	background: white;
 }
 
-.author-data {
-	width: 90%;
-	padding: 0 15px;
+#author-data {
+	width: calc(100% - 40px);
+	margin: 20px;
 }
 
 #text {
@@ -58,15 +52,46 @@ body,
 	width: 130px;
 	height: 50px;
 	display: flex;
-	margin: 20px 20px 0 auto;
+	margin: 20px 0 0 auto;
 	text-transform: uppercase;
 	font-weight: 500;
 	justify-content: center;
 	align-items: center;
-	color: white;
 	border: 1px solid;
-	border-color: var(--color1);
 	border-radius: 6px;
-	background: var(--color1);
 	cursor: pointer;
+}
+
+#tweet-quote {
+	width: 130px;
+	height: 50px;
+	display: flex;
+	margin: 20px 0 0 auto;
+	text-transform: uppercase;
+	font-weight: 500;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid rgb(137, 98, 123);
+	color: rgb(137, 98, 123);
+	border-radius: 6px;
+	cursor: pointer;
+}
+#tweet-quote a {
+	text-decoration: none;
+}
+
+.color1 {
+	color: var(--color1);
+}
+.color2 {
+	color: var(--color2);
+}
+.color3 {
+	color: var(--color3);
+}
+.color4 {
+	color: var(--color4);
+}
+.color5 {
+	color: var(--color5);
 }
